--- a/webcontent/css/style.css
+++ b/webcontent/css/style.css
@@ -13,6 +13,10 @@ body a{
 	-o-transition:0.5s all;
 	-ms-transition:0.5s all;
 }
+ul
+{
+    list-style-type: none;
+}
 .head-nav {
   float: left;
 }
@@ -1946,6 +1950,7 @@ width:40%;
 }
 /*-- responsive --*/
 @media(max-width:320px){
+
 .cart.box_1 {
   width: 100%;
 }
@@ -2085,4 +2090,93 @@ li.bt-nn {
 .nbs-flexisel-item {
   margin: 0 0;
 }
+/* added*/
+
+.menu-name.ng-binding {
+    display: inline-block;
+    font-family: Trebuchet MS;
+    font-size: 16px;
+    font-style: oblique;
+    font-weight: 600;
+    width: 158px;
+}
+}
+
+
+
+/*added for */
+header {
+    position: fixed;
+    width: 100%;
+    z-index: 1000;
+}
+
+.list-group-item.items-group:hover {
+    background: #f7fafb none repeat scroll 0 0;
+	}
+#viewDom{
+padding-top:100px;
+}
+#menus {
+padding-left: 0 !important;
+padding-right: 0 !important;
+}
+#search {
+    border-radius: 20px;
+}
+.list-group-item.items-group {
+    min-height: 54px;
+}
+.icon-plus{
+color: #696661;
+}
+.price.col-md-offset-0.col-sm-offset-0 {
+    width: 73px;
+}
+.menu-name.ng-binding {
+    font-family: Trebuchet MS;
+    font-style: oblique;
+    font-weight: 600;
+	font-size: 16px;
+}
+.categoryHeader.ng-binding {
+    color: gray;
+    font-family: cursive;
+    font-size: 18px;
+    font-weight: bold;
+}
+.item-description.ng-binding {
+    font-family: cursive;
+    font-size: 12px;
+    padding-top: 10px;
+}
+.wunderChefBtn {
+    background: rgba(0, 0, 0, 0) linear-gradient(to bottom, #f9c851 0px, #da8626 100%) repeat scroll 0 0 !important;
+    border: 0 none;
+    border-radius: 4px;
+    box-shadow: -3px 2px 4px 0 rgba(0, 0, 0, 0.2) !important;
+    color: #300 !important;
+    cursor: pointer;
+    font-family: Arial,"Helvetica Neue","Liberation Sans",FreeSans,sans-serif;
+    font-size: 2rem;
+    font-weight: 700;
+    line-height: normal !important;
+    padding: 2px 9px;
+    position: relative;
+    text-shadow: 0 1px 0 #f9c851;
+    width: auto;
+    z-index: 1;
+}
+.veg{
+ background: rgba(0, 0, 0, 0) url("../images/veg-non.png") no-repeat scroll -3px 0 / 69px 29px;
+ height: 24px;
+ width: 28px;
+}
+.pull-right.moduleRight {
+    width: 100px;
+}
+.non-veg {
+    background: rgba(0, 0, 0, 0) url("../images/veg-non.png") no-repeat scroll -38px 0 / 69px 29px;
+    height: 24px;
+    width: 28px;
 }
